--- a/Myportfolio/package.json
+++ b/Myportfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anilkumar65.github.io/anilPortfolio",
+  "homepage": "https://anilkumar65.github.io/My-portfolio",
   "name": "myportfolio",
   "private": true,
   "version": "0.0.0",
